fix spacing issue on table display

--- a/app/assets/stylesheets/application_css.css
+++ b/app/assets/stylesheets/application_css.css
@@ -1,7 +1,7 @@
 /* app wide styles */
 
 body {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url(https://source.unsplash.com/random?food);
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.9) 0%,rgba(1,0,0,0.7) 100%), url(https://source.unsplash.com/random?food);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
